# butilib

./: .gitignore  pyproject.toml
butilib/: __init__.py  baza.py  card.py  contrada.py  deck.py  descriptions.py  model.py  play_baza.py  play_hand.py  schema.py  suit.py  types.py  variants.py
butilib/testing/: __init__.py  model.py
tests/: test_baza.py  test_card.py  test_contrada.py  test_deck.py  test_descriptions.py  test_model.py  test_play_baza.py  test_play_hand.py  test_schema.py  test_suit.py  test_testing_model.py  test_types.py  test_variants.py
